--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="page-header">
         <h1>Weather Vista</h1>
-        <h2> By: Cris</h2>
+        <h2> By: Cris Buezo</h2>
     </div>
 
     <div class="container">
@@ -23,7 +23,7 @@
         <div class="search-box">
             <i class="fa-solid fa-map-location-dot"></i>
             <input type="text" placeholder=" Enter your location">
-            <button class="fa-solid fa-magnifying-glass"></button>
+            <button class="fa-solid fa-magnifying-glass fa-fade"></button>
         </div>
 
         <div class="not-found">
@@ -39,14 +39,14 @@
 
         <div class="weather-details">
             <div class="humidity">
-                <i class="fa-solid fa-water fa-fade"></i> 
+                <i class="fa-solid fa-water"></i> 
                 <div class="text">
                     <span></span>
                     <p>Humidity</p>
                 </div>
             </div>
             <div class="wind">
-                <i class="fa-solid fa-wind fa-fade"></i>
+                <i class="fa-solid fa-wind"></i>
                 <div class="text">
                     <span></span>
                     <p>Wind Speed</p>
