--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+      rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Weather App - Cris</title>
 </head>
@@ -15,13 +17,16 @@
 <body>
     <div class="page-header">
         <h1>Weather Vista</h1>
-        <h2> By: Cris Buezo</h2>
     </div>
+    <div class="page-body">
+        <h2>By Cris</h2>
+    </div>
+
 
     <div class="container">
 
         <div class="search-box">
-            <i class="fa-solid fa-map-location-dot"></i>
+            <i class="fa-solid fa-map-location-dot"></i>›
             <input type="text" placeholder=" Enter your location">
             <button class="fa-solid fa-magnifying-glass fa-fade"></button>
         </div>
@@ -39,14 +44,14 @@
 
         <div class="weather-details">
             <div class="humidity">
-                <i class="fa-solid fa-water"></i> 
+                <i class="material-symbols-outlined">humidity_percentage</i> 
                 <div class="text">
                     <span></span>
                     <p>Humidity</p>
                 </div>
             </div>
             <div class="wind">
-                <i class="fa-solid fa-wind"></i>
+                <i class="material-symbols-outlined">humidity_percentage</i> 
                 <div class="text">
                     <span></span>
                     <p>Wind Speed</p>
@@ -61,3 +66,8 @@
 </body>
 
 </html>
+
+
+
+
+
